--- a/Lecture Notes/index.html
+++ b/Lecture Notes/index.html
@@ -5,7 +5,15 @@
 </head>
 
 <body>
-	Hi, my name is Victor.
+
+<h1>News Today</h1>
+
+Some text here.
+
+<hr />
+
+Horizontal line break here. <br /> Then a line break here.
+
 </body>
 
 </html>
