--- a/Lecture Notes/index.html
+++ b/Lecture Notes/index.html
@@ -1,5 +1,5 @@
 <html>
-
+<!-- This is more work than C's // or Bash's # comment marker -->
 <head>
 	<title>This is like my 12th or 13th webpage, not counting shit I made through WordPress, but whatever</title>
 </head>
@@ -8,12 +8,26 @@
 
 <h1>News Today</h1>
 
-Some text here.
+Some text here. 
+<br /><b>This is bold text.</b>
+<br /> <strong>This is strong text. It is the same as bold.</strong>
+
+<br /><i>This is italic text.</i>
+<br /><em>This is "emphatic" text. It is the same as italic.</em>
 
 <hr />
 
 Horizontal line break here. <br /> Then a line break here.
 
+<blockquote><em>
+They say that life's a carousel <br />
+Spinning fast, you've got to ride it well <br />
+The world is full of Kings and Queens <br />
+Who blind your eyes and steal your dreams <br />
+It's Heaven and Hell  -- Ronnie James Dio
+</em></blockquote>
+
+Blockquote double-indents but it does not preserve linebreaks. Interesting.
 </body>
 
 </html>
