--- a/Lecture Notes/index.html
+++ b/Lecture Notes/index.html
@@ -6,28 +6,75 @@
 
 <body>
 
-<h1>News Today</h1>
+	<h1>News Today</h1>
 
-Some text here. 
-<br /><b>This is bold text.</b>
-<br /> <strong>This is strong text. It is the same as bold.</strong>
+	Some text here. 
+	<br /><b>This is bold text.</b>
+	<br /> <strong>This is strong text. It is the same as bold.</strong>
 
-<br /><i>This is italic text.</i>
-<br /><em>This is "emphatic" text. It is the same as italic.</em>
+	<br /><i>This is italic text.</i>
+	<br /><em>This is "emphatic" text. It is the same as italic.</em>
 
-<hr />
+	<hr />
 
-Horizontal line break here. <br /> Then a line break here.
+	Horizontal line break here. <br /> Then a line break here.
 
-<blockquote><em>
-They say that life's a carousel <br />
-Spinning fast, you've got to ride it well <br />
-The world is full of Kings and Queens <br />
-Who blind your eyes and steal your dreams <br />
-It's Heaven and Hell  -- Ronnie James Dio
-</em></blockquote>
+	<blockquote><em>
+		They say that life's a carousel <br />
+		Spinning fast, you've got to ride it well <br />
+		The world is full of Kings and Queens <br />
+		Who blind your eyes and steal your dreams <br />
+		It's Heaven and Hell  -- Ronnie James Dio
+	</em></blockquote>
 
-Blockquote double-indents but it does not preserve linebreaks. Interesting.
+	Blockquote double-indents but it does not preserve linebreaks. Interesting.
+	
+	<ol> Ordered List
+		<li>Windows</li>
+		<li>OSX</li>
+		<li>Linux</li>
+	</ol>
+	
+	<ul> Unordered/Bulletin List
+		<li>Wii</li>
+		<li>PS3</li>
+		<li>X360</li>
+	</ul>
+	
+	<dl> Dictionary
+		<dt>Term</dt>
+		<dd>Definition of aforementioned term.</dd>
+		
+		<dt>Term 2</dt>
+		<dd>Definition of term 2.</dd>
+		
+		<dt>Term 3</dt>
+		<dd>Definition of term 3.</dd>
+	</dl>
+	
+	<ol> <strong>Gaming Backlog</strong>
+		<li>PS3
+			<ul>
+				<li>Valkyria Chronicles</li>
+				<li>Catherine</li>
+				<li>El Shaddai: Ascension of the Metatron</li>
+			</ul>
+		</li>
+		<li>PS2
+			<ul>
+				<li>Digital Devil Saga 2</li>
+				<li>Persona 3</li>
+				<li>Shin Megami Tensei: Devil Summoner</li>
+			</ul>
+		</li>
+		<li>Wii
+			<ul>
+				<li>Xenoblade</li>
+				<li>Metroid: Other M</li>
+				<li>Legend of Zelda: Twilight Princess</li>
+			</ul>
+		</li>
+	</ol>
 </body>
 
 </html>
