--- a/Lecture Notes/contact.html
+++ b/Lecture Notes/contact.html
@@ -1,13 +1,11 @@
 <html>
-<!-- This is more work than C's // or Bash's # comment marker -->
 <head>
-	<title>Homepage</title>
+	<title>Contact</title>
 </head>
 
 <body>
-<!-- All my work from previous lectures. Gone! It's all gone! -->
 	
-	<h1>Homepage</h1>
+	<h1>Contact</h1>
 	<a href="index.html">Homepage</a><br />
 	<a href="about.html">About</a><br />
 	<a href="contact.html">Contact</a><br />
