--- a/Lecture Notes/about.html
+++ b/Lecture Notes/about.html
@@ -1,17 +1,16 @@
 <html>
-<!-- This is more work than C's // or Bash's # comment marker -->
 <head>
-	<title>Homepage</title>
+	<title>About</title>
 </head>
 
 <body>
-<!-- All my work from previous lectures. Gone! It's all gone! -->
 	
-	<h1>Homepage</h1>
+	<h1>About</h1>
 	<a href="index.html">Homepage</a><br />
 	<a href="about.html">About</a><br />
 	<a href="contact.html">Contact</a><br />
 	<a href="admin files/admin1.html">Admin</a><br />
+	
 	
 </body>
 
