--- a/Lecture Notes/index.html
+++ b/Lecture Notes/index.html
@@ -9,8 +9,9 @@
 	
 	<h1>Homepage</h1>
 	<a href="index.html">Homepage</a><br />
-	<a href="about.html">About</a><br />
+	<a href="about.html" target="_blank">About</a><br />
 	<a href="contact.html">Contact</a><br />
+	<a href="contact.html#con">Controversy</a><br />
 	<a href="admin files/admin1.html">Admin</a><br />
 	
 </body>
