--- a/Lecture Notes/index.html
+++ b/Lecture Notes/index.html
@@ -1,7 +1,16 @@
-<html>
+<!DOCTYPE html
+     PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+ 
+<html xmlns="http://www.w3.org/1999/xhtml">
 <!-- This is more work than C's // or Bash's # comment marker -->
 <head>
 	<title>Homepage</title>
+	<meta http-equiv="Content-type" content="text/html"; charset="UTF-8" />
+	<meta name="keywords" content="worthless" />
+	<meta name="description" content="Some meta data" />
+<!--	<meta http-equiv="Refresh" content="10; url = "http://www.amazon.com" />  -->
+	<meta name="author" name="Admiral Asshat" />
 </head>
 
 <body>
