--- a/Lecture Notes/index.html
+++ b/Lecture Notes/index.html
@@ -23,6 +23,7 @@
 	<a href="contact.html#con">Controversy</a><br />
 	<a href="admin files/admin1.html">Admin</a><br />
 	
+	<a href="https://en.wikipedia.org/wiki/Pentagram_%28band%29#Fall_and_rise"><img src="https://upload.wikimedia.org/wikipedia/commons/e/e1/Pentagram_HITS09_by-Christian-Misje-2308.jpg" height="400px" alt="Doped out Bobby Liebling" title="Cool guy" /> </a>
 </body>
 
 </html>
