--- a/Lecture Notes/index.html
+++ b/Lecture Notes/index.html
@@ -14,16 +14,20 @@
 </head>
 
 <body>
-<!-- All my work from previous lectures. Gone! It's all gone! -->
 	
-	<h1>Homepage</h1>
-	<a href="index.html">Homepage</a><br />
-	<a href="about.html" target="_blank">About</a><br />
-	<a href="contact.html">Contact</a><br />
-	<a href="contact.html#con">Controversy</a><br />
-	<a href="admin files/admin1.html">Admin</a><br />
-	
-	<a href="https://en.wikipedia.org/wiki/Pentagram_%28band%29#Fall_and_rise"><img src="https://upload.wikimedia.org/wikipedia/commons/e/e1/Pentagram_HITS09_by-Christian-Misje-2308.jpg" height="400px" alt="Doped out Bobby Liebling" title="Cool guy" /> </a>
+	<table border="1px" cellpadding="15px" cellspacing="10px">
+		<tr>
+			<td>Row 1, Cell 1</td>
+			<td>Row 1, Cell 2</td>
+		</tr>
+		<tr>
+			<td>Row 2, Cell 1</td>
+			<td rowspan="2">Row 2</td>
+		</tr>
+		<tr>
+			<td>Row 3, Cell 1</td>
+		</tr>
+	</table>
 </body>
 
 </html>
