--- a/Lecture Notes/about.html
+++ b/Lecture Notes/about.html
@@ -1,15 +1,15 @@
 <html>
 <head>
 	<title>About</title>
+	<link rel="stylesheet" type="text/css" href="style.css" />
+
 </head>
 
 <body>
 	
 	<h1>About</h1>
-	<a href="index.html">Homepage</a><br />
-	<a href="about.html">About</a><br />
-	<a href="contact.html">Contact</a><br />
-	<a href="admin files/admin1.html">Admin</a><br />
+	
+	<h2>Sub Heading</h2>
 	
 	
 </body>
