--- a/Lecture Notes/contact.html
+++ b/Lecture Notes/contact.html
@@ -1,12 +1,14 @@
 <html>
 <head>
 	<title>Contact</title>
+	<link rel="stylesheet" type="text/css" href="style.css" />
+
 </head>
 
 <body>
 	
 	<h1>Development</h1>
-	<p>This project is originally by Don Ho, a developer based in Paris and graduated from Paris Diderot University in 2000. This project, based on the Scintilla editor component, is written in C++ with only Win32 API calls using only the STL in order to increase performance and reduce program size. The aim of Notepad++ is to reduce overall power consumption by using efficient binaries that require less CPU power.</p>
+	<p style="color: blue; font-size: 20px;">This project is originally by Don Ho, a developer based in Paris and graduated from Paris Diderot University in 2000. This project, based on the Scintilla editor component, is written in C++ with only Win32 API calls using only the STL in order to increase performance and reduce program size. The aim of Notepad++ is to reduce overall power consumption by using efficient binaries that require less CPU power.</p>
 	
 	<h1>Programming languages</h1>
 	<p>Notepad++ supports syntax highlighting and code folding for over 50 programming, scripting, and markup languages.[6][8] It attempts to automatically detect the language that a given file uses, using a modifiable list of file extension bindings. Users may also manually set the current language, overriding the extension's default language. The program also supports autocompletion for a subset of the API of some programming languages.</p>
