--- a/Lecture Notes/index.html
+++ b/Lecture Notes/index.html
@@ -11,23 +11,15 @@
 	<meta name="description" content="Some meta data" />
 <!--	<meta http-equiv="Refresh" content="10; url = "http://www.amazon.com" />  -->
 	<meta name="author" name="Admiral Asshat" />
+
+	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
+	<h1>Homepage</h1>
 	
-	<table border="1px" cellpadding="15px" cellspacing="10px">
-		<tr>
-			<td>Row 1, Cell 1</td>
-			<td>Row 1, Cell 2</td>
-		</tr>
-		<tr>
-			<td>Row 2, Cell 1</td>
-			<td rowspan="2">Row 2</td>
-		</tr>
-		<tr>
-			<td>Row 3, Cell 1</td>
-		</tr>
-	</table>
+	<h2>New Title</h2>
+	
 </body>
 
 </html>
