--- a/Lecture Notes/index.html
+++ b/Lecture Notes/index.html
@@ -18,7 +18,13 @@
 <body>
 	<h1>Homepage</h1>
 	
-	<h2>New Title</h2>
+	<h2 class="generic">New Title</h2>
+	
+	<p>This is one paragraph.</p>
+	
+	<p class="special">This is a styled paragraph.</p>
+	
+	<h2 id="unique">This will be <span class="snazzy">unique</span> to the page</h2>
 	
 </body>
 
