--- a/Lecture Notes/contact.html
+++ b/Lecture Notes/contact.html
@@ -7,11 +7,16 @@
 
 <body>
 	
+	<div id="container">
+	<div id="history">
 	<h1>Development</h1>
 	<p style="color: blue; font-size: 20px;">This project is originally by Don Ho, a developer based in Paris and graduated from Paris Diderot University in 2000. This project, based on the Scintilla editor component, is written in C++ with only Win32 API calls using only the STL in order to increase performance and reduce program size. The aim of Notepad++ is to reduce overall power consumption by using efficient binaries that require less CPU power.</p>
+	</div>
 	
+	<div id="compatibility">
 	<h1>Programming languages</h1>
 	<p>Notepad++ supports syntax highlighting and code folding for over 50 programming, scripting, and markup languages.[6][8] It attempts to automatically detect the language that a given file uses, using a modifiable list of file extension bindings. Users may also manually set the current language, overriding the extension's default language. The program also supports autocompletion for a subset of the API of some programming languages.</p>
+	</div>
 	
 	<ol>
 		<li>Ada, asp, Assembly, autoIt</li>
@@ -37,11 +42,14 @@
 		<li>YAML</li>
 	</ol>
 
+	<div id="controversy">
 	<h1><a name="con">Controversy</a></h1>
 	<p>In March 2008, the "Boycott Beijing 2008" banner was placed on Notepad++'s SourceForge.net homepage.[12] A few months later, most users in China were unable to reach the SourceForge.net website for about a month (June 26, 2008 – July 24, 2008). This led to the widespread belief that China had banned SourceForge.net in retaliation for the Boycott banner.[13][14][15]</p>
-
-	<p>In January 2010, the US government forced open source project hosts to comply with US law and deny access from five countries (Cuba, Iran, North Korea, Sudan, and Syria). As a response to what the developer felt was a violation of the Free and open-source software (FOSS) philosophy, in June 2010, Notepad++ moved out of US territorial jurisdiction by releasing a version on TuxFamily, in France.[16][17]</p>
 	
+	<p>In January 2010, the US government forced open source project hosts to comply with US law and deny access from five countries (Cuba, Iran, North Korea, Sudan, and Syria). As a response to what the developer felt was a violation of the Free and open-source software (FOSS) philosophy, in June 2010, Notepad++ moved out of US territorial jurisdiction by releasing a version on TuxFamily, in France.[16][17]</p>
+	</div>
+	
+	</div>
 	<h1>Contact</h1>
 	<a href="index.html">Homepage</a><br />
 	<a href="about.html">About</a><br />
