--- a/Lecture Notes/contact.html
+++ b/Lecture Notes/contact.html
@@ -50,11 +50,16 @@
 	</div>
 	
 	</div>
+	
 	<h1>Contact</h1>
-	<a href="index.html">Homepage</a><br />
-	<a href="about.html">About</a><br />
-	<a href="contact.html">Contact</a><br />
-	<a href="admin files/admin1.html">Admin</a><br />
+	<div id="nav">
+		<ul>
+			<li><a href="index.html">Homepage</a><br /></li>
+			<li><a href="about.html">About</a><br /></li>
+			<li><a href="contact.html">Contact</a><br /></li>
+			<li><a href="admin files/admin1.html">Admin</a><br /></li>
+		</ul>
+	</div>
 	
 </body>
 
