--- a/Lecture Notes/about.html
+++ b/Lecture Notes/about.html
@@ -1,17 +1,39 @@
-<html>
+<!DOCTYPE html
+     PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+ 
+<html xmlns="http://www.w3.org/1999/xhtml">
+<!-- This is more work than C's // or Bash's # comment marker -->
 <head>
 	<title>About</title>
-	<link rel="stylesheet" type="text/css" href="style.css" />
+	<meta http-equiv="Content-type" content="text/html"; charset="UTF-8" />
+	<meta name="keywords" content="worthless" />
+	<meta name="description" content="Some meta data" />
+	<meta name="author" name="Admiral Asshat" />
 
+	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
-	
 	<h1>About</h1>
 	
-	<h2>Sub Heading</h2>
+	<div id="nav">
+		<ul>
+			<li><a href="index.html">Homepage</a><br /></li>
+			<li><a href="about.html">About</a><br /></li>
+			<li><a href="contact.html">Contact</a><br /></li>
+		</ul>
+	</div>
 	
+	<div id="container">
+			
+		<p>This is the about page.</p>
 	
+	</div>
+
+	<div id="footer">
+		This is the footer section.
+	</div>
 </body>
 
 </html>
