--- a/Lecture Notes/index.html
+++ b/Lecture Notes/index.html
@@ -9,7 +9,6 @@
 	<meta http-equiv="Content-type" content="text/html"; charset="UTF-8" />
 	<meta name="keywords" content="worthless" />
 	<meta name="description" content="Some meta data" />
-<!--	<meta http-equiv="Refresh" content="10; url = "http://www.amazon.com" />  -->
 	<meta name="author" name="Admiral Asshat" />
 
 	<link rel="stylesheet" type="text/css" href="style.css" />
@@ -18,14 +17,24 @@
 <body>
 	<h1>Homepage</h1>
 	
-	<h2 class="generic">New Title</h2>
+	<div id="nav">
+		<ul>
+			<li><a href="index.html">Homepage</a><br /></li>
+			<li><a href="about.html">About</a><br /></li>
+			<li><a href="contact.html">Contact</a><br /></li>
+			<li><a href="admin files/admin1.html">Admin</a><br /></li>
+		</ul>
+	</div>
 	
-	<p>This is one paragraph.</p>
+	<div id="container">
+			
+		This is the welcome page.
 	
-	<p class="special">This is a styled paragraph.</p>
-	
-	<h2 id="unique">This will be <span class="snazzy">unique</span> to the page</h2>
-	
+	</div>
+
+	<div id="footer">
+		This is the footer section.
+	</div>
 </body>
 
 </html>
