--- a/Lecture Notes/index.html
+++ b/Lecture Notes/index.html
@@ -28,7 +28,18 @@
 	
 	<div id="container">
 			
-		This is the welcome page.
+		<p>This is the welcome page.</p>
+		
+		<select>
+			<option value="red">red</option>
+			<option value="blue">blue</option>
+			<option value="yellow">yellow</option>
+			<option value="black">black</option>
+		</select>
+		
+		<textarea name="comments" rows="15" columns="20">
+		
+		</textarea>
 	
 	</div>
 
