--- a/Lecture Notes/index.html
+++ b/Lecture Notes/index.html
@@ -30,14 +30,7 @@
 	
 	<div id="container">
 		
-		<form>
-			<div class="field_container"><label>First Name:</label><input type="text" maxlength="15"></div>
-			<div class="field_container"><label>Last Name:</label><input type="text"></div>
-			<div class="field_container"><label>Address:</label><input type="text"></div>
-			<div class="field_container"><label>Password:</label><input type="password"></div>
-			<div class="field_container"><label>Confirm Password:</label><input type="password"></div><br />
-			<div class="button"><input type="submit" value="Submit"></div>
-		</form>
+		<iframe width="420" height="315" src="//www.youtube-nocookie.com/embed/g4ouPGGLI6Q?rel=0" frameborder="0" allowfullscreen></iframe>
 	
 	</div>
 
