--- a/Lecture Notes/Final Project/index.html
+++ b/Lecture Notes/Final Project/index.html
@@ -7,11 +7,22 @@
 	<meta name="description" content="Some kind of descriptor" />
 	<meta name="keywords" content="keys, words" />
 	<meta name="author" content="George Orwell" />
-	<meta http-equiv="content-type" content="text/html; />
-
+	<meta http-equiv="content-type" content="text/html" />
+	<link rel="stylesheet" href="style.css" type="text/css" />
+	
 </head>
 
 <body>
+
+	<div id="header"></div>
+	
+	<div id="wrapper">
+
+		<div id="main"></div>
+		<div id="footer"></div>
+
+	</div>
+	
 </body>
  
  </html>
