--- a/Lecture Notes/Final Project/index.html
+++ b/Lecture Notes/Final Project/index.html
@@ -14,12 +14,20 @@
 
 <body>
 
-	<div id="header"></div>
+	<div id="header">
+		<div id="nav">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</div>
+	</div>
 	
 	<div id="wrapper">
-
-		<div id="main"></div>
-		<div id="footer"></div>
+		wrapper
+		<div id="main"><img src="images/1.jpg" /></div>
+		<div id="footer">&copy; 2014 Final Project. All rights reserved.</div>
 
 	</div>
 	
