--- a/Lecture Notes/Final Project/index.html
+++ b/Lecture Notes/Final Project/index.html
@@ -15,6 +15,9 @@
 <body>
 
 	<div id="header">
+	
+		<div id="logo"><img src="images/logo.png" width="200px" /></div>
+		
 		<div id="nav">
 			<ul>
 				<li><a href="index.html">Home</a></li>
@@ -25,8 +28,17 @@
 	</div>
 	
 	<div id="wrapper">
-		wrapper
+	
 		<div id="main"><img src="images/1.jpg" /></div>
+		
+		<table id="table1" cellspacing="40">
+			<tr>
+				<td><h3>Home</h3>"Arma virumque cano, Troiae qui primus ab oris Italiam, fato profugus, Laviniaque venit..." <a href="index.html">more</a></td>
+				<td><h3>About</h3>"Arma virumque cano, Troiae qui primus ab oris Italiam, fato profugus, Laviniaque venit..." <a href="about.html">more</a></td>
+				<td><h3>Contact</h3>"Arma virumque cano, Troiae qui primus ab oris Italiam, fato profugus, Laviniaque venit..." <a href="contact.html">more</a></td>
+			</tr>
+		</table>
+		
 		<div id="footer">&copy; 2014 Final Project. All rights reserved.</div>
 
 	</div>
