--- a/Lecture Notes/Final Project/contact.html
+++ b/Lecture Notes/Final Project/contact.html
@@ -3,7 +3,7 @@
  <html xmins="http://www.w3.org/1999/xhtml">
  
  <head>
-	<title>Welcome</title>
+	<title>Contact</title>
 	<meta name="description" content="Some kind of descriptor" />
 	<meta name="keywords" content="keys, words" />
 	<meta name="author" content="George Orwell" />
@@ -29,15 +29,8 @@
 	
 	<div id="wrapper">
 	
-		<div id="main"><img src="images/1.jpg" /></div>
+		<div id="main"><h3>Contact</h3></div>
 		
-		<table id="table1" cellspacing="40">
-			<tr>
-				<td><h3>Home</h3>"Arma virumque cano, Troiae qui primus ab oris Italiam, fato profugus, Laviniaque venit..." <a href="index.html">more</a></td>
-				<td><h3>About</h3>"Arma virumque cano, Troiae qui primus ab oris Italiam, fato profugus, Laviniaque venit..." <a href="about.html">more</a></td>
-				<td><h3>Contact</h3>"Arma virumque cano, Troiae qui primus ab oris Italiam, fato profugus, Laviniaque venit..." <a href="contact.html">more</a></td>
-			</tr>
-		</table>
 		
 		<div id="footer"><br />&copy; 2014 Final Project. All rights reserved.</div>
 
