--- a/Lecture Notes/Final Project/about.html
+++ b/Lecture Notes/Final Project/about.html
@@ -16,7 +16,7 @@
 
 	<div id="header">
 	
-		<div id="logo"><img src="images/logo.png" width="200px" /></div>
+		<div id="logo"><a href="index.html"><img src="images/logo.png" width="200px" /></a></div>
 		
 		<div id="nav">
 			<ul>
