--- a/Lecture Notes/Final Project/index.html
+++ b/Lecture Notes/Final Project/index.html
@@ -9,14 +9,14 @@
 	<meta name="author" content="George Orwell" />
 	<meta http-equiv="content-type" content="text/html" />
 	<link rel="stylesheet" href="style.css" type="text/css" />
-	
+	<link rel="shortcut icon" href="images/favicon.ico" />
 </head>
 
 <body>
 
 	<div id="header">
 	
-		<div id="logo"><img src="images/logo.png" width="200px" /></div>
+		<div id="logo"><a href="index.html"><img src="images/logo.png" width="200px" /></a></div>
 		
 		<div id="nav">
 			<ul>
